# sdl3-sys-rs

./: Cargo.toml  README.md  build.rs  sdl_bindings.rs  sdl_gfx_framerate_bindings.rs  sdl_gfx_imagefilter_bindings.rs  sdl_gfx_primitives_bindings.rs  sdl_gfx_rotozoom_bindings.rs  sdl_image_bindings.rs  sdl_mixer_bindings.rs  sdl_ttf_bindings.rs
c-sdl3/VisualC-WinRT/: SDL-UWP.vcxproj  SDL-UWP.vcxproj.filters
c-sdl3/VisualC/SDL_test/: SDL_test.vcxproj
c-sdl3/VisualC/tests/gamepadmap/: gamepadmap.vcxproj
c-sdl3/VisualC/tests/loopwave/: loopwave.vcxproj
c-sdl3/VisualC/tests/testatomic/: testatomic.vcxproj
c-sdl3/VisualC/tests/testautomation/: testautomation.vcxproj
c-sdl3/VisualC/tests/testfile/: testfile.vcxproj
c-sdl3/VisualC/tests/testgamepad/: testgamepad.vcxproj
c-sdl3/VisualC/tests/testjoystick/: testjoystick.vcxproj
c-sdl3/VisualC/tests/testplatform/: testplatform.vcxproj
c-sdl3/VisualC/tests/testpower/: testpower.vcxproj
c-sdl3/VisualC/tests/testrumble/: testrumble.vcxproj
c-sdl3/VisualC/tests/testsensor/: testsensor.vcxproj
c-sdl3/VisualC/tests/testshape/: testshape.vcxproj
c-sdl3/VisualC/tests/testyuv/: testyuv.vcxproj
c-sdl3/docs/: README-android.md  README-cmake.md  README-dynapi.md  README-ios.md  README-linux.md  README-macos.md  README-ps2.md  README-psp.md  README-raspberrypi.md  README-touch.md  README-winrt.md
examples/: min_init.rs  no_std.rs
src/: error.rs  init.rs  lib.rs  macros.rs  messagebox.rs  prelude.rs  video.rs
