[package]
name = "sdl3-sys"
description = "Rust bindings to version 3 of the SDL library."
repository = "https://github.com/Lokathor/sdl3-sys-rs"
version = "0.0.2+sdl3-dev-2023-04-16"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = []
use_mac_framework = []
static_link = []
bundled = ["cmake"]
sdl3_mixer = []
sdl3_image = []
sdl3_ttf = []
sdl3_gfx = []

[dependencies]
libc = "^0.2"

[build-dependencies]
version-compare = "0.1"
cfg-if = "^1.0"
bindgen = { version = "0.65.1", optional = true}
pkg-config = { version = "0.3", optional = true }
vcpkg = { version = "0.2.12", optional = true }
cmake = { version = "0.1.50", optional = true }
flate2 = { version = "1", optional = true }
