[package]
name = "sdl3-sys"
description = "Rust bindings to version 3 of the SDL library."
repository = "https://github.com/Lokathor/sdl3-sys-rs"
version = "0.0.4+sdl3-dev-2023-04-16"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]
keywords = ["SDL", "windowing", "graphics", "ffi"]
categories = ["rendering","external-ffi-bindings","game-engines","multimedia"]
license = "MIT"
links = "SDL3"
build = "build.rs"
edition = "2021"

[lib]
name = "sdl3_sys"
path = "src/lib.rs"

[dependencies]
libc = "^0.2"

[build-dependencies.bindgen]
version = "^0.65.1"
optional = true

[build-dependencies.pkg-config]
version = "^0.3"
optional = true

[build-dependencies.vcpkg]
version = "^0.2.12"
optional = true

[build-dependencies.cmake]
version = "^0.1"
optional = true

[build-dependencies.flate2]
version = "^1"
optional = true

[build-dependencies]
version-compare = "0.1"
cfg-if = "^1.0"

[features]

default = []
use-pkgconfig = ["pkg-config"]
use-vcpkg = ["vcpkg"]
use-bindgen = ["bindgen"]
static-link = []
use_mac_framework = []
bundled = ["cmake"]
mixer = []
image = []
ttf = []
gfx = []
